--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\APCS2\\Desktop\\APC-eZ-2k16\\Calculate Library","type":"PROJECT","hints":{"PROJECT_NAME":"Calculate Library"}},"ABSENT"]]
